Demo: styling fixes for better readability

--- a/demo/styles.css
+++ b/demo/styles.css
@@ -3,6 +3,8 @@ body {
 }
 
 h1 {
+  font-size: 42px;
+  letter-spacing: -.015em;
   margin: 3rem 0 0 0;
 }
 
@@ -18,8 +20,54 @@ h1 {
 h3 {
   cursor: pointer;
   border-bottom: 1px solid #efefef;
-  padding-top: 3rem;
+  padding-top: 2rem;
   margin-bottom: 2rem;
+}
+
+h3 a {
+  float: right;
+  color: rgba(0,0,0,.3);
+  transition: color 300ms ease-in-out;
+  position: relative;
+  top: 3px;
+}
+
+h3 a:hover {
+  text-decoration: none;
+  color: #007bff;
+}
+
+p, li {
+  font-size: 21px;
+  line-height: 1.58;
+  letter-spacing: -.003em;
+}
+
+p {
+  margin-top: 29px;
+}
+
+pre {
+  margin-top: -1px;
+  padding: 20px !important;
+  border-radius: 2px;
+  background: rgba(0,0,0,.05);
+}
+
+em {
+  font-family: Menlo,Monaco,"Courier New",Courier,monospace;
+  font-style: normal;
+  font-size: 16px;
+  background: rgba(0,0,0,.05);
+  padding: 3px 4px;
+  margin: 0 2px;
+  border-radius: 2px;
+}
+
+@media (min-width: 1200px) {
+  .container {
+    max-width: 740px;
+  }
 }
 
 .navbar-brand {
@@ -52,6 +100,10 @@ h3 {
 
 .navbar .container .copyrights a:hover {
   color: #fff;
+}
+
+.sources {
+  margin-top: 29px;
 }
 
 .demo .actions {
